parser/output/mylangParser.java
// $ANTLR null C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g 2018-09-18 11:35:31

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class mylangParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOL", "CHAR", "ENDL", "ESC_SEQ", 
		"HEX_DIGIT", "ID", "INT", "OCTAL_ESC", "PASS", "STRING", "TAB", "UNICODE_ESC", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':'", "'<'", "'<='", 
		"'='", "'=='", "'>'", "'>='", "'and'", "'def'", "'elif'", "'else'", "'if'", 
		"'not'", "'or'", "'print'", "'return'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int BOOL=4;
	public static final int CHAR=5;
	public static final int ENDL=6;
	public static final int ESC_SEQ=7;
	public static final int HEX_DIGIT=8;
	public static final int ID=9;
	public static final int INT=10;
	public static final int OCTAL_ESC=11;
	public static final int PASS=12;
	public static final int STRING=13;
	public static final int TAB=14;
	public static final int UNICODE_ESC=15;
	public static final int WS=16;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public mylangParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public mylangParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return mylangParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g"; }



	// $ANTLR start "program"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:3:1: program : explist ;
	public final void program() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:3:9: ( explist )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:3:12: explist
			{
			pushFollow(FOLLOW_explist_in_program11);
			explist();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "explist"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:6:1: explist : ( tabs expression explist | endls explist |);
	public final void explist() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:6:9: ( tabs expression explist | endls explist |)
			int alt1=3;
			alt1 = dfa1.predict(input);
			switch (alt1) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:6:11: tabs expression explist
					{
					pushFollow(FOLLOW_tabs_in_explist21);
					tabs();
					state._fsp--;

					pushFollow(FOLLOW_expression_in_explist23);
					expression();
					state._fsp--;

					pushFollow(FOLLOW_explist_in_explist25);
					explist();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:7:4: endls explist
					{
					pushFollow(FOLLOW_endls_in_explist30);
					endls();
					state._fsp--;

					pushFollow(FOLLOW_explist_in_explist32);
					explist();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:9:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "explist"



	// $ANTLR start "expression"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:11:1: expression : ( function_call | assignment | function | arithmetic | relational | logical | print | if_then_else | while );
	public final void expression() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:12:2: ( function_call | assignment | function | arithmetic | relational | logical | print | if_then_else | while )
			int alt2=9;
			switch ( input.LA(1) ) {
			case ID:
				{
				switch ( input.LA(2) ) {
				case 17:
					{
					alt2=1;
					}
					break;
				case 19:
				case 20:
				case 22:
				case 23:
					{
					alt2=4;
					}
					break;
				case 25:
				case 26:
				case 28:
				case 29:
				case 30:
					{
					int LA2_11 = input.LA(3);
					if ( ((LA2_11 >= ID && LA2_11 <= INT)) ) {
						int LA2_12 = input.LA(4);
						if ( (LA2_12==EOF||LA2_12==BOOL||LA2_12==ENDL||(LA2_12 >= ID && LA2_12 <= INT)||LA2_12==PASS||LA2_12==TAB||LA2_12==21||LA2_12==27||(LA2_12 >= 32 && LA2_12 <= 36)||(LA2_12 >= 38 && LA2_12 <= 40)) ) {
							alt2=5;
						}
						else if ( (LA2_12==31||LA2_12==37) ) {
							alt2=6;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 12, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case ID:
				case 21:
				case 27:
					{
					alt2=2;
					}
					break;
				case 31:
				case 37:
					{
					alt2=6;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case 21:
			case 27:
				{
				alt2=2;
				}
				break;
			case TAB:
			case 32:
				{
				alt2=3;
				}
				break;
			case INT:
				{
				int LA2_4 = input.LA(2);
				if ( ((LA2_4 >= 19 && LA2_4 <= 20)||(LA2_4 >= 22 && LA2_4 <= 23)) ) {
					alt2=4;
				}
				else if ( ((LA2_4 >= 25 && LA2_4 <= 26)||(LA2_4 >= 28 && LA2_4 <= 30)) ) {
					int LA2_11 = input.LA(3);
					if ( ((LA2_11 >= ID && LA2_11 <= INT)) ) {
						int LA2_12 = input.LA(4);
						if ( (LA2_12==EOF||LA2_12==BOOL||LA2_12==ENDL||(LA2_12 >= ID && LA2_12 <= INT)||LA2_12==PASS||LA2_12==TAB||LA2_12==21||LA2_12==27||(LA2_12 >= 32 && LA2_12 <= 36)||(LA2_12 >= 38 && LA2_12 <= 40)) ) {
							alt2=5;
						}
						else if ( (LA2_12==31||LA2_12==37) ) {
							alt2=6;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 12, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case BOOL:
			case 36:
				{
				alt2=6;
				}
				break;
			case 38:
				{
				alt2=7;
				}
				break;
			case 35:
				{
				alt2=8;
				}
				break;
			case 40:
				{
				alt2=9;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:12:4: function_call
					{
					pushFollow(FOLLOW_function_call_in_expression47);
					function_call();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:13:5: assignment
					{
					pushFollow(FOLLOW_assignment_in_expression54);
					assignment();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:14:5: function
					{
					pushFollow(FOLLOW_function_in_expression61);
					function();
					state._fsp--;

					}
					break;
				case 4 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:15:4: arithmetic
					{
					pushFollow(FOLLOW_arithmetic_in_expression67);
					arithmetic();
					state._fsp--;

					}
					break;
				case 5 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:16:4: relational
					{
					pushFollow(FOLLOW_relational_in_expression73);
					relational();
					state._fsp--;

					}
					break;
				case 6 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:17:5: logical
					{
					pushFollow(FOLLOW_logical_in_expression80);
					logical();
					state._fsp--;

					}
					break;
				case 7 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:18:5: print
					{
					pushFollow(FOLLOW_print_in_expression87);
					print();
					state._fsp--;

					}
					break;
				case 8 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:19:5: if_then_else
					{
					pushFollow(FOLLOW_if_then_else_in_expression94);
					if_then_else();
					state._fsp--;

					}
					break;
				case 9 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:20:4: while
					{
					pushFollow(FOLLOW_while_in_expression100);
					while();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "expression"



	// $ANTLR start "function_call"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:23:1: function_call : ID '(' arglist ')' ;
	public final void function_call() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:24:2: ( ID '(' arglist ')' )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:24:4: ID '(' arglist ')'
			{
			match(input,ID,FOLLOW_ID_in_function_call113); 
			match(input,17,FOLLOW_17_in_function_call115); 
			pushFollow(FOLLOW_arglist_in_function_call117);
			arglist();
			state._fsp--;

			match(input,18,FOLLOW_18_in_function_call119); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function_call"



	// $ANTLR start "literal"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:27:1: literal : ( STRING | CHAR | INT | BOOL );
	public final void literal() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:28:2: ( STRING | CHAR | INT | BOOL )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:
			{
			if ( (input.LA(1) >= BOOL && input.LA(1) <= CHAR)||input.LA(1)==INT||input.LA(1)==STRING ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "literal"



	// $ANTLR start "return"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:34:1: return : 'return' arglist ;
	public final void return() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:34:9: ( 'return' arglist )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:34:11: 'return' arglist
			{
			match(input,39,FOLLOW_39_in_return156); 
			pushFollow(FOLLOW_arglist_in_return158);
			arglist();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "return"



	// $ANTLR start "argument"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:37:1: argument : ( ID | literal );
	public final void argument() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:38:2: ( ID | literal )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				alt3=1;
			}
			else if ( ((LA3_0 >= BOOL && LA3_0 <= CHAR)||LA3_0==INT||LA3_0==STRING) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:38:4: ID
					{
					match(input,ID,FOLLOW_ID_in_argument171); 
					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:38:9: literal
					{
					pushFollow(FOLLOW_literal_in_argument175);
					literal();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "argument"



	// $ANTLR start "arglist"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:41:1: arglist : ( ',' arglist | argument arglist |);
	public final void arglist() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:41:9: ( ',' arglist | argument arglist |)
			int alt4=3;
			switch ( input.LA(1) ) {
			case 21:
				{
				alt4=1;
				}
				break;
			case CHAR:
			case ID:
			case STRING:
				{
				alt4=2;
				}
				break;
			case INT:
				{
				int LA4_3 = input.LA(2);
				if ( ((LA4_3 >= 19 && LA4_3 <= 20)||(LA4_3 >= 22 && LA4_3 <= 23)||(LA4_3 >= 25 && LA4_3 <= 26)||(LA4_3 >= 28 && LA4_3 <= 30)) ) {
					alt4=3;
				}
				else if ( (LA4_3==EOF||(LA4_3 >= BOOL && LA4_3 <= ENDL)||(LA4_3 >= ID && LA4_3 <= INT)||(LA4_3 >= PASS && LA4_3 <= TAB)||LA4_3==18||LA4_3==21||LA4_3==27||(LA4_3 >= 32 && LA4_3 <= 36)||(LA4_3 >= 38 && LA4_3 <= 40)) ) {
					alt4=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case EOF:
			case ENDL:
			case PASS:
			case TAB:
			case 18:
			case 27:
			case 32:
			case 33:
			case 34:
			case 35:
			case 36:
			case 38:
			case 39:
			case 40:
				{
				alt4=3;
				}
				break;
			case BOOL:
				{
				int LA4_5 = input.LA(2);
				if ( (LA4_5==EOF||(LA4_5 >= BOOL && LA4_5 <= ENDL)||(LA4_5 >= ID && LA4_5 <= INT)||(LA4_5 >= PASS && LA4_5 <= TAB)||LA4_5==18||LA4_5==21||LA4_5==27||(LA4_5 >= 32 && LA4_5 <= 36)||(LA4_5 >= 38 && LA4_5 <= 40)) ) {
					alt4=2;
				}
				else if ( (LA4_5==31||LA4_5==37) ) {
					alt4=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:41:11: ',' arglist
					{
					match(input,21,FOLLOW_21_in_arglist186); 
					pushFollow(FOLLOW_arglist_in_arglist188);
					arglist();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:42:4: argument arglist
					{
					pushFollow(FOLLOW_argument_in_arglist193);
					argument();
					state._fsp--;

					pushFollow(FOLLOW_arglist_in_arglist195);
					arglist();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:44:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "arglist"



	// $ANTLR start "idlist"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:46:1: idlist : ( ',' idlist | ID idlist |);
	public final void idlist() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:46:9: ( ',' idlist | ID idlist |)
			int alt5=3;
			switch ( input.LA(1) ) {
			case 21:
				{
				alt5=1;
				}
				break;
			case ID:
				{
				alt5=2;
				}
				break;
			case 18:
			case 27:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:46:11: ',' idlist
					{
					match(input,21,FOLLOW_21_in_idlist209); 
					pushFollow(FOLLOW_idlist_in_idlist211);
					idlist();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:47:4: ID idlist
					{
					match(input,ID,FOLLOW_ID_in_idlist216); 
					pushFollow(FOLLOW_idlist_in_idlist218);
					idlist();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:49:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "idlist"



	// $ANTLR start "function"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:51:1: function : tabs 'def' ID '(' idlist ')' ':' endls explist tabs return ;
	public final void function() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:52:2: ( tabs 'def' ID '(' idlist ')' ':' endls explist tabs return )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:52:4: tabs 'def' ID '(' idlist ')' ':' endls explist tabs return
			{
			pushFollow(FOLLOW_tabs_in_function233);
			tabs();
			state._fsp--;

			match(input,32,FOLLOW_32_in_function235); 
			match(input,ID,FOLLOW_ID_in_function237); 
			match(input,17,FOLLOW_17_in_function239); 
			pushFollow(FOLLOW_idlist_in_function241);
			idlist();
			state._fsp--;

			match(input,18,FOLLOW_18_in_function243); 
			match(input,24,FOLLOW_24_in_function245); 
			pushFollow(FOLLOW_endls_in_function247);
			endls();
			state._fsp--;

			pushFollow(FOLLOW_explist_in_function251);
			explist();
			state._fsp--;

			pushFollow(FOLLOW_tabs_in_function255);
			tabs();
			state._fsp--;

			pushFollow(FOLLOW_return_in_function257);
			return();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "assignment"
	// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:57:1: assignment : idlist '=' ( ID | literal | arithmetic | relational | logical | function_call ) ;
	public final void assignment() throws RecognitionException {
		try {
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:2: ( idlist '=' ( ID | literal | arithmetic | relational | logical | function_call ) )
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:4: idlist '=' ( ID | literal | arithmetic | relational | logical | function_call )
			{
			pushFollow(FOLLOW_idlist_in_assignment269);
			idlist();
			state._fsp--;

			match(input,27,FOLLOW_27_in_assignment271); 
			// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:15: ( ID | literal | arithmetic | relational | logical | function_call )
			int alt6=6;
			switch ( input.LA(1) ) {
			case ID:
				{
				switch ( input.LA(2) ) {
				case 19:
				case 20:
				case 22:
				case 23:
					{
					alt6=3;
					}
					break;
				case 25:
				case 26:
				case 28:
				case 29:
				case 30:
					{
					int LA6_7 = input.LA(3);
					if ( ((LA6_7 >= ID && LA6_7 <= INT)) ) {
						int LA6_10 = input.LA(4);
						if ( (LA6_10==EOF||LA6_10==BOOL||LA6_10==ENDL||(LA6_10 >= ID && LA6_10 <= INT)||LA6_10==PASS||LA6_10==TAB||LA6_10==21||LA6_10==27||(LA6_10 >= 32 && LA6_10 <= 36)||(LA6_10 >= 38 && LA6_10 <= 40)) ) {
							alt6=4;
						}
						else if ( (LA6_10==31||LA6_10==37) ) {
							alt6=5;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 6, 10, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 6, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case 17:
					{
					alt6=6;
					}
					break;
				case EOF:
				case BOOL:
				case ENDL:
				case ID:
				case INT:
				case PASS:
				case TAB:
				case 21:
				case 27:
				case 32:
				case 33:
				case 34:
				case 35:
				case 36:
				case 38:
				case 39:
				case 40:
					{
					alt6=1;
					}
					break;
				case 31:
				case 37:
					{
					alt6=5;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case INT:
				{
				switch ( input.LA(2) ) {
				case 19:
				case 20:
				case 22:
				case 23:
					{
					alt6=3;
					}
					break;
				case 25:
				case 26:
				case 28:
				case 29:
				case 30:
					{
					int LA6_7 = input.LA(3);
					if ( ((LA6_7 >= ID && LA6_7 <= INT)) ) {
						int LA6_10 = input.LA(4);
						if ( (LA6_10==EOF||LA6_10==BOOL||LA6_10==ENDL||(LA6_10 >= ID && LA6_10 <= INT)||LA6_10==PASS||LA6_10==TAB||LA6_10==21||LA6_10==27||(LA6_10 >= 32 && LA6_10 <= 36)||(LA6_10 >= 38 && LA6_10 <= 40)) ) {
							alt6=4;
						}
						else if ( (LA6_10==31||LA6_10==37) ) {
							alt6=5;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 6, 10, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 6, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case EOF:
				case BOOL:
				case ENDL:
				case ID:
				case INT:
				case PASS:
				case TAB:
				case 21:
				case 27:
				case 32:
				case 33:
				case 34:
				case 35:
				case 36:
				case 38:
				case 39:
				case 40:
					{
					alt6=2;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case BOOL:
				{
				int LA6_3 = input.LA(2);
				if ( (LA6_3==EOF||LA6_3==BOOL||LA6_3==ENDL||(LA6_3 >= ID && LA6_3 <= INT)||LA6_3==PASS||LA6_3==TAB||LA6_3==21||LA6_3==27||(LA6_3 >= 32 && LA6_3 <= 36)||(LA6_3 >= 38 && LA6_3 <= 40)) ) {
					alt6=2;
				}
				else if ( (LA6_3==31||LA6_3==37) ) {
					alt6=5;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
			case STRING:
				{
				alt6=2;
				}
				break;
			case 36:
				{
				alt6=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:16: ID
					{
					match(input,ID,FOLLOW_ID_in_assignment274); 
					}
					break;
				case 2 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:21: literal
					{
					pushFollow(FOLLOW_literal_in_assignment278);
					literal();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:31: arithmetic
					{
					pushFollow(FOLLOW_arithmetic_in_assignment282);
					arithmetic();
					state._fsp--;

					}
					break;
				case 4 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:44: relational
					{
					pushFollow(FOLLOW_relational_in_assignment286);
					relational();
					state._fsp--;

					}
					break;
				case 5 :
					// C:\\Users\\mocli\\Downloads\\_cs686\\mylang\\parser\\mylang.g:58:57: logical
					{
					pushFollow(FOLLOW_logical_in_assignment290);
					logical();
					state._fsp--;
